<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_core_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_rounded_corners_clickable"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <include
                    android:id="@+id/profile_core_info"
                    layout="@layout/profile_core_info" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="16dp"
                android:background="@drawable/background_rounded_border_blue"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/work_permits_btn"
                app:layout_constraintTop_toBottomOf="@id/profile_core_info_container">

                <TextView
                    android:id="@+id/your_qr_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:text="@string/qr_code_btn_text"
                    android:textAppearance="@style/Text.Bold"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/qr_code_shimmer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@id/qr_code_img"
                    app:layout_constraintEnd_toEndOf="@id/qr_code_img"
                    app:layout_constraintStart_toStartOf="@id/qr_code_img"
                    app:layout_constraintTop_toTopOf="@id/qr_code_img">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/placeholder_rounded10" />

                </com.facebook.shimmer.ShimmerFrameLayout>

                <ImageView
                    android:id="@+id/qr_code_img"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="64dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/ic_qr_code_inactive"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/your_qr_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/work_permits_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_rounded_corners_clickable"
                android:backgroundTint="@color/blue_enabled_dark"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingHorizontal="18dp"
                android:text="@string/work_permissions_btn_text"
                android:textAppearance="@style/Text.P3"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/scan_qr_btn"
                app:layout_constraintEnd_toStartOf="@id/workers_btn"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/workers_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_rounded_corners_clickable"
                android:backgroundTint="@color/yellow_enabled"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingHorizontal="18dp"
                android:text="@string/worker_btn_text"
                android:textAppearance="@style/Text.P3"
                android:textColor="@color/light_gray"
                app:layout_constraintBottom_toTopOf="@id/scan_qr_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/work_permits_btn" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scan_qr_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/background_rounded_corners_clickable"
                android:paddingVertical="22dp"
                app:layout_constraintBottom_toTopOf="@id/about_app_btn">

                <ImageView
                    android:id="@+id/scan_qr_img"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_qr_code"
                    app:layout_constraintBottom_toBottomOf="@id/scan_qr_text"
                    app:layout_constraintEnd_toStartOf="@id/scan_qr_text"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/scan_qr_text" />

                <TextView
                    android:id="@+id/scan_qr_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_qr_btn_text"
                    android:textAppearance="@style/Text.Bold"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/scan_qr_img"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/about_app_btn"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/about_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
